fix hero on mobile

--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -56,7 +56,7 @@
     flex-direction: column;
     gap: var(--md-sys-spacing-sm);
     max-width: 820px;
-    margin: 0 auto;
+    margin: 0;
     width: 100%;
     color: var(--color-yellow);
 }
@@ -84,6 +84,6 @@
     display: flex;
     position: absolute;
     gap:var(--md-sys-spacing-lg);
-    right: var(--md-sys-spacing-xl);
+    left: var(--md-sys-spacing-xl);
     bottom: var(--md-sys-spacing-xl);
 }
